--- a/Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03b.qmd
+++ b/Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03b.qmd
@@ -1,11 +1,10 @@
 ---
 title: "Hands-on Exercise 3b: Programming Animated Statistical Graphics with R"
-date: "12 Jan 2024"
+date: "14 Jan 2024"
 date-modified: "last-modified"
 editor: visual
-toc-depth: 4
 execute:
-  freeze: auto
+  freeze: true #never re-render during project render
   echo: true #if false, displays charts without codes
   eval: true #if false, displays codes without charts
   warning: false #dont display if there are any warnings
@@ -15,9 +14,11 @@ format:
     code-overflow: scroll
     code-summary: "Show the code"
     code-line-numbers: true
+    toc-depth: 4
+    toc-expand: 4
 ---
 
-![](Images/placeholder-simmer.PNG){fig-align="center"}
+![](Images/animation.gif){fig-align="center"}
 
 # 1 Overview
 
@@ -30,8 +31,6 @@ When telling a visually-driven data story, animated graphics tends to attract th
 ## 1.1 Basic concepts of animation
 
 When creating animations, the plot does not actually move. Instead, many individual plots are built and then stitched together as movie frames, just like an old-school flip book or cartoon. Each frame is a different plot when conveying motion, which is built using some relevant subset of the aggregate data. The subset drives the flow of the animation when stitched back together.
-
-![](https://r4va.netlify.app/chap04/img/image1.jpg)
 
 ## 1.2 Terminology
 
@@ -49,16 +48,20 @@ Before we dive into the steps for creating an animated statistical graph, it's i
 We will use p_load from pacman package to check, install and load the following R packages:
 
 | **Package**                                                         | **Description**                                                                                                                                                                                      |
-|---------------------------------|---------------------------------------|
+|-------------------|-----------------------------------------------------|
 | [**plotly**](https://plotly.com/r/)                                 | R library for plotting interactive statistical graphs.                                                                                                                                               |
 | [**gganimate**](https://gganimate.com/)                             | An ggplot extension for creating animated statistical graphs                                                                                                                                         |
 | [**gifski**](https://cran.r-project.org/web/packages/gifski/)       | Converts video frames to GIF animations using pngquant's fancy features for efficient cross-frame palettes and temporal dithering. It produces animated GIFs that use thousands of colors per frame. |
 | [**gapminder**](https://cran.r-project.org/web/packages/gapminder/) | An excerpt of the data available at Gapminder.org. We just want to use its *country_colors* scheme.                                                                                                  |
 | [**tidyverse**](https://www.tidyverse.org/)                         | A family of modern R packages specially designed to support data science, analysis and communication task including creating static statistical graphs.                                              |
+| [**ggpp**](https://docs.r4photobiology.info/ggpp/)                  | Supports data labels and annotations for ggplot2.                                                                                                                                                    |
+
+: {tbl-colwidths="\[20,80\]"}
 
 ```{r}
 pacman::p_load(readxl, gifski, gapminder, 
-               plotly, gganimate, tidyverse)
+               plotly, gganimate, tidyverse,
+               ggrepel, ggpp)
 ```
 
 ## Importing Data
@@ -68,7 +71,7 @@ In this hands-on exercise, the *Data* worksheet from *GlobalPopulation* Excel wo
 Write a code chunk to import Data worksheet from GlobalPopulation Excel workbook by using appropriate R package from tidyverse family.
 
 ::: panel-tabset
-## mutate_each()
+## mutate_at()
 
 ```{r}
 col <- c("Country", "Continent")
@@ -111,10 +114,14 @@ globalPop_2 <- read_xls("data/GlobalPopulation.xls",
 glimpse(globalPop)
 ```
 
-There are 222 unique countries in the dataset.
+There are 222 unique countries, spanning 6 continents in the dataset.
 
 ```{r}
 n_distinct(globalPop$Country)
+```
+
+```{r}
+n_distinct(globalPop$Continent)
 ```
 :::
 
@@ -122,19 +129,19 @@ n_distinct(globalPop$Country)
 
 [**gganimate**](https://gganimate.com/) extends the grammar of graphics as implemented by ggplot2 to include the description of animation. It does this by providing a range of new grammar classes that can be added to the plot object in order to customise how it should change with time.
 
--   `transition_*()`: defines how the data should be spread out and how it relates to itself across time, i.e. you want your data to change.
+| Arguments            | Description                                                                                                                           |
+|---------------|---------------------------------------------------------|
+| `transition_*()`     | Defines how the data should be spread out and how it relates to itself across time, i.e. you want your data to change.                |
+| `view_*()`           | Defines how the positional scales should change along the animation, i.e. you want your viewpoint to change                           |
+| `shadow_*()`         | Defines how data from other points in time should be presented in the given point in time, i.e. you want the animation to have memory |
+| `enter_*()/exit_*()` | Defines how new data should appear and how old data should disappear during the course of the animation.                              |
+| `ease_aes()`         | Defines how different aesthetics should be eased during transitions.                                                                  |
 
--   `view_*()`: defines how the positional scales should change along the animation, i.e. you want your viewpoint to change
-
--   `shadow_*()`: defines how data from other points in time should be presented in the given point in time, i.e. you want the animation to have memory
-
--   `enter_*()/exit_*()`: defines how new data should appear and how old data should disappear during the course of the animation.
-
--   `ease_aes()`: defines how different aesthetics should be eased during transitions.
+: {tbl-colwidths="\[20,80\]"}
 
 ## 3.1 Static population bubble plot
 
-In the code chunk below, the basic ggplot2 functions are used to create a static [bubble plot](https://r-graph-gallery.com/bubble-chart.html). A bubble plot is created when a third numeric variable is assigned to `size` argument inside a ggplot with geom_point.
+In the code chunk below, the basic ggplot2 functions are used to create a static [bubble plot](https://r-graph-gallery.com/bubble-chart.html). A bubble plot is created when a third numeric variable is assigned to `size =` argument inside a ggplot with geom_point.
 
 ```{r}
 #| code-fold: true
@@ -150,9 +157,12 @@ p <- ggplot(data= globalPop,
              show.legend = FALSE) +
   scale_color_manual(values=country_colors) +  #<<< 'country_colors' from Gapminder lib
   scale_size(range= c(2,12)) +
-  labs(title='Year:{frame_time}',
+  labs(title = "Age Distribution Across Time",
+      subtitle ='Year: {frame_time}',
        x = '% Aged',
-       y= '% Young')
+       y= '% Young')+
+  theme(legend.position = "bottom",
+      plot.background = element_rect(fill = "#f5f5f5", color = "#f5f5f5"))
 
 p
 ```
@@ -161,12 +171,72 @@ p
 
 -   `Population` is mapped to `size` aes in `ggplot`, thus this range parameter controls the min and max size of the points.
 
-**Using `scale_color_viridis_d()`** The code below uses `scale_color_viridis_d()` colour scale instead, and does not require Gapminder package to be loaded.
+**Using `scale_color_viridis_d()`** The code below uses `scale_color_viridis_d()` discrete colour scale instead, and does not require Gapminder package to be loaded.
 
 ```{r}
 #| code-fold: true
 #| code-summary: "Show the code"
 
+
+p2 <- ggplot(data= globalPop,
+       aes(x= Old,
+           y=Young,
+           size= Population,
+           color=Country)) +
+  geom_point(alpha = 0.7,
+             show.legend = FALSE) +
+  scale_color_viridis_d(option="plasma")+    #<<<
+  scale_size(range= c(2,12)) +
+  labs(title = "Age Distribution Across Time",
+      subtitle ='Year: {frame_time}',
+       x = '% Aged',
+       y= '% Young')+
+  theme(legend.position = "bottom",
+      plot.background = element_rect(fill = "#f5f5f5", color = "#f5f5f5"))  
+
+p2
+```
+
+## 3.2 Animated bubble plot
+
+Now you can incorporate the animation into a basic ggplot graph. Take note that when you run this code, the visual takes some time to render. This is because RStudio is creating a gif representation of your animated chart.
+
+::: panel-tabset:
+## Basic
+
+In the code chunk below,
+
+-   [`transition_time()`](https://gganimate.com/reference/transition_time.html) of **gganimate** is used to create transition through a **continuous variable**, where there are distinct states in time (i.e. *Year*).
+
+-   [ease_aes()](https://gganimate.com/reference/ease_aes.html) is used to control easing of aesthetics. The default is `linear`. Other methods are: quadratic, cubic, quartic, quintic, sine, circular, exponential, elastic, back, and bounce.
+
+**Transition through distinct countries in time**
+
+```{r}
+#| code-fold: true
+#| code-summary: "Show the code"
+
+p +
+  transition_time(Year) +
+  ease_aes("linear")
+```
+
+```{r}
+#| code-fold: true
+#| code-summary: "Show the code"
+
+p2 +
+  transition_time(Year) +
+  ease_aes("linear")
+```
+
+## Making Year more visible **\~WIP**
+
+With the animation, it's more engaging to see how demography has changed over time in different countries. The date is included in the title, but it is omitted from the graph, which prevents the title from being used for other purposes.
+
+```{r}
+#| code-fold: true
+#| code-summary: "Show the code"
 
 ggplot(data= globalPop,
        aes(x= Old,
@@ -175,50 +245,170 @@ ggplot(data= globalPop,
            color=Country)) +
   geom_point(alpha = 0.7,
              show.legend = FALSE) +
-  scale_color_viridis_d()+
-  #scale_color_manual(values=country_colors) +  #<<< 'country_colors' from Gapminder lib
+  geom_text(aes(x=min(Old),
+                y=min(Young),
+                label=as.factor(Year)),
+            hjust= -1.9,
+            vjust = -7.2,
+            alpha = 0.2,
+            col = "gray",
+            size= 20) +
+  scale_color_manual(values=country_colors) +  #<<< 'country_colors' from Gapminder lib
   scale_size(range= c(2,12)) +
-  labs(title='Year:{frame_time}',
+  labs(title = "Age Distribution Across Time",
        x = '% Aged',
-       y= '% Young')
+       y= '% Young')+
+  theme(plot.background = element_rect(fill = "#f5f5f5", color = "#f5f5f5"))+
+  transition_time(Year) +
+  ease_aes("linear")  
 ```
 
-## 3.2 Animated bubble plot
+**Note:** Not sure why this didn't render with the *Year* like the GIF in RStudio, still debugging :)
 
-::: panel-tabset:
-## Basic
+![](Images/animation2.gif){fig-align="center"}
 
-In the code chunk below,
+## Labelling with `geom_text`
 
--   [`transition_time()`](https://gganimate.com/reference/transition_time.html) of **gganimate** is used to create transition through distinct states in time (i.e. *Year*).
+Text geoms are useful for labeling plots. They can be used by themselves as scatterplots or in combination with other geoms, for example, labeling points or for annotating the height of bars. [`geom_text()`](https://ggplot2.tidyverse.org/reference/geom_text.html) adds only text to the plot. [`geom_label()`](https://ggplot2.tidyverse.org/reference/geom_text.html) draws a rectangle behind the text, making it easier to read.
 
--   [ease_aes()](https://gganimate.com/reference/ease_aes.html) is used to control easing of aesthetics. The default is `linear`. Other methods are: quadratic, cubic, quartic, quintic, sine, circular, exponential, elastic, back, and bounce.
-
-**Transition through distinct countries in time**
+I thought it would be clearer for the `geom_point` and `geom_text` to be placed side-by-side so I won't have to refer to a the legend, but the trade-off is a messier overlapped plot.
 
 ```{r}
-p +
+#| code-fold: true
+#| code-summary: "Show the code"
+
+pt <- ggplot(data= globalPop,
+       aes(x= Old,
+           y=Young,
+           size= Population,
+           color=Country)) +
+  geom_point(alpha = 0.7,
+             show.legend = FALSE) +
+    scale_color_manual(values=country_colors) +  #<<< 'country_colors' from Gapminder lib
+    scale_size(range= c(2,12)) +
+  labs(title = "Age Distribution Across Time",
+      subtitle ='Year: {frame_time}',
+         x = '% Aged',
+         y= '% Young')+
+    geom_text(data=globalPop,                #<<<
+            aes(x=Old + 1.2,                 #<<< Add/minus a bit to or from the x mapping to shift labels left/right
+                y=Young + 1.2,               #<<< Add/minus a bit to or from the y mapping to shift labels up/down  
+                label=Country,
+                color = "Black",             #<<< Some Country colours were too light when color = Country was used
+                hjust=0,
+                vjust= 1.2),
+                size=2.5,
+                show.legend = FALSE)+        #<<< Should be outside of aes() of geom_text()
+  theme(plot.background = element_rect(fill = "#f5f5f5", color = "#f5f5f5")) +  
+  transition_time(Year) +
+  ease_aes("linear")
+
+pt
+```
+
+Replacing `geom_text()` with `geom_text_repel()` from our last chapter gives us the following results.
+
+```{r}
+#| code-fold: true
+#| code-summary: "Show the code"
+
+pr <- ggplot(data= globalPop,
+       aes(x= Old,
+           y=Young,
+           size= Population,
+           color=Country)) +
+  geom_point(alpha = 0.7,
+             show.legend = FALSE) +
+    scale_color_manual(values=country_colors) +  #<<< 'country_colors' from Gapminder lib
+    scale_size(range= c(2,12)) +
+  labs(title = "Age Distribution Across Time",
+      subtitle ='Year: {frame_time}',
+         x = '% Aged',
+         y= '% Young')+
+  geom_text_repel(data=globalPop,            #<<<
+            aes(x=Old + 1.2,                 #<<< Add/minus a bit to or from the x mapping to shift labels left/right
+                y=Young + 1.2,               #<<< Add/minus a bit to or from the y mapping to shift labels up/down 
+                label=Country,
+                color = "Black",             #<<< Some Country colours were too light when color = Country was used
+                hjust=0,
+                vjust= 1.2),
+            size=2.5,
+            show.legend = FALSE,             #<<< Should be outside of aes() of geom_text()
+            max.overlaps=)+
+  
+  theme(plot.background = element_rect(fill = "#f5f5f5", color = "#f5f5f5")) +
+  transition_time(Year) +
+  ease_aes("linear")
+
+pr
+```
+
+Used with both `geom_text_repel()` from **ggrepel** and `geom_text_s()` from **ggpp**.
+
+```{r}
+#| code-fold: true
+#| code-summary: "Show the code"
+
+ggplot(data= globalPop,
+       aes(x= Old,
+           y=Young,
+           size= Population,
+           color=Country,
+           label=Country)) +                   #<<< Need to add for geom_text_s to work
+  geom_point(alpha = 0.7,
+             show.legend = FALSE) +
+  scale_color_manual(values=country_colors) +  #<<< 'country_colors' from Gapminder lib
+  scale_size(range= c(2,12)) +
+  labs(title = "Age Distribution Across Time",
+      subtitle ='Year: {frame_time}',
+       x = '% Aged',
+       y= '% Young')+
+  geom_text_s(nudge_x=2, show.legend = FALSE)+
+  expand_limits(x=10) +
+  theme(plot.background = element_rect(fill = "#f5f5f5", color = "#f5f5f5")) +
   transition_time(Year) +
   ease_aes("linear")
 ```
 
-## Create facets by continent
+You can use `anim_save("file_location", plot)` function to export animated chart in GIF format.
 
 ```{r}
-p + facet_wrap(~Continent) +
+#| eval: false 
+
+anim_save(filename="Images/animation.gif", pr)
+```
+
+## Create facets by continent
+
+Combining with `facet_wrap()` allows us to arrange the plots in a more space efficient manner when we have a single variable with many levels, such as the 6 unique *Continents*.
+
+```{r}
+#| code-fold: true
+#| code-summary: "Show the code"
+
+p + 
+  facet_wrap(~Continent) +
   transition_time(Year)
 ```
 
 ## Let the view follow the data in each frame
 
 ```{r}
+#| code-fold: true
+#| code-summary: "Show the code"
+
 p + transition_time(Year) +
   view_follow(fixed_y = TRUE)
 ```
 
-## Show preceding frames with gradual falloff
+## Display preceding frames with a gradual decrease in size
+
+By displaying the most recent frames up to the current, this shadow is intended to create a small wake after data. You can choose to gradually reduce the shadow's size and/or opacity. The duration of the wake is not specified in absolute frames, as this would subject the animation to framerate changes. Rather than that, it is expressed as a percentage of the total duration of the animation.
 
 ```{r}
+#| code-fold: true
+#| code-summary: "Show the code"
+
 p + transition_time(Year) +
   shadow_wake(wake_length = 0.1, alpha = FALSE)
 ```
@@ -226,6 +416,9 @@ p + transition_time(Year) +
 ## Show the original data as background marks
 
 ```{r}
+#| code-fold: true
+#| code-summary: "Show the code"
+
 p + transition_time(Year) +
   shadow_mark(alpha = 0.3, size = 0.5)
 ```
@@ -233,42 +426,43 @@ p + transition_time(Year) +
 
 ## 3.2 Animated Line Graph
 
-::: panel-tabset
-## Static plot
-
 ```{r}
+#| code-fold: true
+#| code-summary: "Show the code"
+
 l <- ggplot(
   globalPop,
-  aes(Year, Old, group = Continent, color = Continent)
+  aes(Year, Old, group = Continent, color = Continent),
   ) +
-  geom_line() +
+  geom_line(show.legend = FALSE) +
   scale_color_viridis_d() +
-  labs(x = "Year", y = "% Aged")+
-  theme(legend.position = "top")
-  
-l
+  labs(x = "Year", y = "% Aged", title="% Aged Across Years")+
+  geom_text(data=globalPop,              #<<<
+            aes(x=Year,
+                y=Old,
+                label=Continent,
+                color=Continent,
+                hjust=0,
+                size=10),
+                show.legend = FALSE)+
+  theme(plot.background = element_rect(fill = "#f5f5f5", color = "#f5f5f5"),
+        legend.background = element_rect(fill="#f5f5f5"))
 ```
 
-## Reveal data along a given dimension
+## 3.2.1 Reveal data along a given dimension
 
 Reveal by day (x-axis):
 
 ```{r}
+#| code-fold: true
+#| code-summary: "Show the code"
+
 l + 
   geom_point() +
   transition_reveal(Year)
 ```
 
-Points can be kept by giving them a unique group:
-
-```{r}
-l + 
-  geom_point(aes(group = seq_along(Year))) +
-  transition_reveal(Year)
-```
-
-Plot looks weird because a lot of countries for each continent.
-:::
+Animation looks weird because there are a lot of countries for each continent for every year.
 
 # 4 Animated Data Visualisation: plotly
 
@@ -332,8 +526,6 @@ bp
 -   Kam, T.S. (2023). [Programming Animated Statistical Graphics with R](https://r4va.netlify.app/chap04).
 
 -   [Getting Started](https://gganimate.com/articles/gganimate.html)
-
--   Visit this [link](https://rpubs.com/raymondteo/dataviz8) for a very interesting implementation of gganimate by your senior.
 
 -   [Building an animation step-by-step with gganimate](https://www.alexcookson.com/post/2020-10-18-building-an-animation-step-by-step-with-gganimate/).
 
