--- a/Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03b.qmd
+++ b/Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03b.qmd
@@ -22,7 +22,7 @@ format:
 
 # 1 Overview
 
-When telling a visually-driven data story, animated graphics tends to attract the interest of the audience and make deeper impression than static graphics. In this hands-on exercise, we will learn how to create animated data visualisation by using **gganimate** and **plotly r** packages. At the same time, we will also learn how to:
+When telling a visually-driven data story, animated graphics tend to attract the interest of the audience and make deeper impression than static graphics. In this hands-on exercise, we will learn how to create animated data visualisation by using **gganimate** and **plotly r** packages. At the same time, we will also learn how to:
 
 \(i\) reshape data by using **tidyr** package, and
 
@@ -48,7 +48,7 @@ Before we dive into the steps for creating an animated statistical graph, it's i
 We will use p_load from pacman package to check, install and load the following R packages:
 
 | **Package**                                                         | **Description**                                                                                                                                                                                      |
-|-------------------|-----------------------------------------------------|
+|--------------------|----------------------------------------------------|
 | [**plotly**](https://plotly.com/r/)                                 | R library for plotting interactive statistical graphs.                                                                                                                                               |
 | [**gganimate**](https://gganimate.com/)                             | An ggplot extension for creating animated statistical graphs                                                                                                                                         |
 | [**gifski**](https://cran.r-project.org/web/packages/gifski/)       | Converts video frames to GIF animations using pngquant's fancy features for efficient cross-frame palettes and temporal dithering. It produces animated GIFs that use thousands of colors per frame. |
@@ -130,7 +130,7 @@ n_distinct(globalPop$Continent)
 [**gganimate**](https://gganimate.com/) extends the grammar of graphics as implemented by ggplot2 to include the description of animation. It does this by providing a range of new grammar classes that can be added to the plot object in order to customise how it should change with time.
 
 | Arguments            | Description                                                                                                                           |
-|---------------|---------------------------------------------------------|
+|-----------------|-------------------------------------------------------|
 | `transition_*()`     | Defines how the data should be spread out and how it relates to itself across time, i.e. you want your data to change.                |
 | `view_*()`           | Defines how the positional scales should change along the animation, i.e. you want your viewpoint to change                           |
 | `shadow_*()`         | Defines how data from other points in time should be presented in the given point in time, i.e. you want the animation to have memory |
@@ -223,6 +223,8 @@ p +
   ease_aes("linear")
 ```
 
+**Using `scale_color_viridis_d()`** :
+
 ```{r}
 #| code-fold: true
 #| code-summary: "Show the code"
@@ -231,43 +233,6 @@ p2 +
   transition_time(Year) +
   ease_aes("linear")
 ```
-
-## Making Year more visible **\~WIP**
-
-With the animation, it's more engaging to see how demography has changed over time in different countries. The date is included in the title, but it is omitted from the graph, which prevents the title from being used for other purposes.
-
-```{r}
-#| code-fold: true
-#| code-summary: "Show the code"
-
-ggplot(data= globalPop,
-       aes(x= Old,
-           y=Young,
-           size= Population,
-           color=Country)) +
-  geom_point(alpha = 0.7,
-             show.legend = FALSE) +
-  geom_text(aes(x=min(Old),
-                y=min(Young),
-                label=as.factor(Year)),
-            hjust= -1.9,
-            vjust = -7.2,
-            alpha = 0.2,
-            col = "gray",
-            size= 20) +
-  scale_color_manual(values=country_colors) +  #<<< 'country_colors' from Gapminder lib
-  scale_size(range= c(2,12)) +
-  labs(title = "Age Distribution Across Time",
-       x = '% Aged',
-       y= '% Young')+
-  theme(plot.background = element_rect(fill = "#f5f5f5", color = "#f5f5f5"))+
-  transition_time(Year) +
-  ease_aes("linear")  
-```
-
-**Note:** Not sure why this didn't render with the *Year* like the GIF in RStudio, still debugging :)
-
-![](Images/animation2.gif){fig-align="center"}
 
 ## Labelling with `geom_text`
 
@@ -345,7 +310,45 @@ pr <- ggplot(data= globalPop,
 pr
 ```
 
-Used with both `geom_text_repel()` from **ggrepel** and `geom_text_s()` from **ggpp**.
+`geom_point` with borders no fill with `geom_text_repel` from **ggrepel**
+
+```{r}
+#| code-fold: true
+#| code-summary: "Show the code"
+
+ggplot(data= globalPop,
+       aes(x= Old,
+           y=Young,
+           size= Population,
+           color=Country,
+           label=Country)) +                   #<<< Need to add for geom_text_s to work
+  geom_point(alpha = 0.85,
+             shape=21,
+             stroke =2,
+             show.legend = FALSE) +
+  scale_color_manual(values=country_colors) +  #<<< 'country_colors' from Gapminder lib
+  scale_size(range= c(2,12)) +
+  labs(title = "Age Distribution Across Time",
+      subtitle ='Year: {frame_time}',
+       x = '% Aged',
+       y= '% Young')+
+  geom_text_repel(data=globalPop,            #<<<
+            aes(x=Old + 1.2,                 #<<< Add/minus a bit to or from the x mapping to shift labels left/right
+                y=Young + 1.2,               #<<< Add/minus a bit to or from the y mapping to shift labels up/down 
+                label=Country,
+                color = "Black",             #<<< Some Country colours were too light when color = Country was used
+                hjust=0,
+                vjust= 1.2),
+            size=2.5,
+            show.legend = FALSE,             #<<< Should be outside of aes() of geom_text()
+            max.overlaps=)+
+  theme(plot.background = element_rect(fill = "#f5f5f5", color = "#f5f5f5")) +
+  transition_time(Year) +
+  ease_aes("linear")
+```
+
+
+Using`geom_text_s()` from **ggpp**.
 
 ```{r}
 #| code-fold: true
@@ -379,6 +382,52 @@ You can use `anim_save("file_location", plot)` function to export animated chart
 
 anim_save(filename="Images/animation.gif", pr)
 ```
+
+## Making Year more visible **\~WIP**
+
+With the animation, it's more engaging to see how demography has changed over time in different countries. The date is included in the title, but it is omitted from the graph, which prevents the title from being used for other purposes.
+
+```{r}
+#| code-fold: true
+#| code-summary: "Show the code"
+
+ggplot(data= globalPop,
+       aes(x= Old,
+           y=Young,
+           size= Population,
+           color=Country)) +
+  geom_point(alpha = 0.7,
+             show.legend = FALSE) +
+  geom_text(aes(x=min(Old),
+                y=min(Young),
+                label=as.factor(Year)),
+            hjust= -1.9,
+            vjust = -7.2,
+            alpha = 0.2,
+            col = "gray",
+            size= 20) +
+  scale_color_manual(values=country_colors) +  #<<< 'country_colors' from Gapminder lib
+  scale_size(range= c(2,12)) +
+  labs(title = "Age Distribution Across Time",
+       x = '% Aged',
+       y= '% Young')+
+  geom_text(data=globalPop,                  #<<<
+            aes(x=Old + 1.2,                 #<<< Add/minus a bit to or from the x mapping to shift labels left/right
+                y=Young + 1.2,               #<<< Add/minus a bit to or from the y mapping to shift labels up/down  
+                label=Country,
+                color = "Black",             #<<< Some Country colours were too light when color = Country was used
+                hjust=0,
+                vjust= 1.2),
+                size=2.5,
+                show.legend = FALSE)+        #<<< Should be outside of aes() of geom_text()  
+  theme(plot.background = element_rect(fill = "#f5f5f5", color = "#f5f5f5"))+
+  transition_time(Year) +
+  ease_aes("linear")  
+```
+
+**Note:** Not sure why this didn't render with the *Year* like the GIF in RStudio, still debugging :)
+
+![](Images/animation2.gif){fig-align="center"}
 
 ## Create facets by continent
 
